# Robot

./: README.md
dream_team_package/battery_state/: package.xml
dream_team_package/battery_state/src/: Bateria.py
dream_team_package/dream_team_msgs/: CMakeLists.txt
dream_team_package/dream_team_package/: CMakeLists.txt  package.xml
dream_team_package/move_to_coord/launch/: move.launch
dream_team_package/provide_map/: package.xml
dream_team_package/provide_map/launch/: provide_map.launch
dream_team_package/provide_map/param/map/: frames.gv  tb3_house.map.yaml
dream_team_package/service_machine/src/: DetectarPersonas.py  machine_state.py
dream_team_package/servicio_cliente_dream_team/: CMakeLists.txt  package.xml
dream_team_package/servicio_cliente_dream_team/launch/: cliente_dream_team.launch
dream_team_package/servicio_cliente_dream_team/models/bobeye/: model.sdf
dream_team_package/servicio_cliente_dream_team/models/bobeye/meshes/: bobeyev2.dae
dream_team_package/servicio_cliente_dream_team/src/: client.py
dream_team_package/servicio_cliente_dream_team/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
dream_team_package/servicio_cliente_dream_team/worlds/: lfm.world  lfm.world.old  mundo_robot_persona  vital-v2.world  vital-v3.world
dream_team_package/vital/: oficinas.pgm  oficinas.yaml  planta_baja.pgm  planta_baja.yaml
src/battery_state/: CMakeLists.txt
src/battery_state/launch/: battery_topic_suscriber.launch
src/battery_state/src/: Bateria.py  battery_topic_suscriber.py
src/common_package/: CMakeLists.txt  package.xml
src/common_package/servicio_cliente_dream_team/: CMakeLists.txt
src/dream_team_msgs/: package.xml
src/dream_team_msgs/srv/: DreamTeamServiceMessage.srv
src/estados_robot/: CMakeLists.txt  package.xml
src/mapeado_lavital/: CMakeLists.txt  package.xml
src/mapeado_lavital/provide_map/param/map/: tb3_house.map.pgm
src/mapeado_lavital/provide_map/param/map2/: segundaplanta.yaml.pgm
src/move_to_coord/: CMakeLists.txt  package.xml
src/move_to_coord/launch/: move.launch
src/move_to_coord/src/: OdomTopicReader.py  move_to_coord.py
src/movimiento_automatizado/: CMakeLists.txt  package.xml
src/my_navigation_stack/: CMakeLists.txt  package.xml
src/my_navigation_stack/launch/: navigation_stack.launch  vital.launch
src/my_navigation_stack/worlds/: vital.world
src/provide_map/: CMakeLists.txt
src/provide_map/launch/: provide_map.launch
src/service_machine/: CMakeLists.txt  package.xml
src/servicio_cliente_dream_team/launch/: cliente_dream_team.launch
src/servicio_cliente_dream_team/src/: client.py
(+5 files in other folders)
