<?xmlversion="1.0"?>
<package format="2">
    <name>dream_team_package</name>
    <version>1.2.1</version>
    <description>Ros kinetic</description>
    <license>Apache2.0</license>
    <license>BSD</license>
    <author email="matconol@epsg.upv.es">Matthew C.O</author>
    <maintainer email="matconol@epsg.upv.es">Matthew C.O</maintainer>
    <url type="website"></url>
    <url type="repository">https://github.com/GTI-3B-Equipo-4/Robot/tree/Sprint-2</url>
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>dream_team_msgs</exec_depend>
    <exec_depend>move_to_coord</exec_depend>
    <exec_depend>provide_map</exec_depend>
    <exec_depend>service_machine</exec_depend>
    <exec_depend>battery_state</exec_depend>
    <exec_depend>servicio_cliente_dream_team</exec_depend>
    <export>
    <metapackage/>
    </export>
</package>