<?xml version="1.0"?>
<package format="2">
  <name>servicio_cliente_dream_team</name>
  <version>0.0.0</version>
  <description>The servicio_cliente_dream_team package</description>


  <maintainer email="mawco@todo.todo">mawco</maintainer>



  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend> actionlib</build_depend>
  <build_depend>dream_team_msgs</build_depend>


  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>smach</build_export_depend>
  <build_export_depend> actionlib</build_export_depend>
  <build_export_depend>smach_ros</build_export_depend>


  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend> actionlib</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>dream_team_msgs</exec_depend>

</package>
